--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ version: '3.0'
 
 services:
   app:
-    image: text-snippets
+    image: 192.168.178.21:5000/text-snippets
     restart: unless-stopped
     build:
       context: .
@@ -15,3 +15,7 @@ services:
       interval: 15s
       timeout: 15s
       retries: 3
+
+# uses custom registry on 192.168.178.21:5000
+# https://linuxhint.com/setup_own_docker_image_repository/
+# docker for desktop edge was needed to edit insecure-registries
